# 3body-gkan

./: .gitignore  .gitmodules  EXPERIMENTS.md  README.md  count_params.py  eval_checkpoints.py  experiments.yaml  pyproject.toml  readings.md  requirements.txt
checkpoints/: best.pt  epoch_000.pt  epoch_001.pt  epoch_002.pt  epoch_009.pt  epoch_010.pt  epoch_019.pt  epoch_049.pt
checkpoints/baseline/: baseline_gnn.pt
checkpoints/baseline_gnn/: best.pt  epoch_000.pt  epoch_001.pt  epoch_002.pt  epoch_004.pt  epoch_006.pt  epoch_008.pt  epoch_009.pt
checkpoints/baseline_gnn_comparison/: best.pt  (+7 more)
cpsc_440_project_proposal/: main.tex  references.bib
data/: train.npz  val.npz
docs/: README.md
nbody_gkan/: __init__.py  device.py  nbody.py  nbody_force_fns.py
project_proposal/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
project_report/: build.sh  project.aux  project.bbl  project.bcf  project.blg  project.out  project.run.xml  project.synctex(busy)  project.tex  refs.bib
results_comparison/: test_indices.npy
scripts/: compare_models.py  demo_with_visualization.sh  extract_kan_weights.py  generate_training_data.py  inspect_checkpoint.py  interpretability_sweep.py  run_experiments.py  symbolic_composition.py  train.py  train_and_visualize.py  train_comparison.py  visualize_comparison.py  visualize_kan_splines.py
src/: NBodySimulator.py  generate_data.py  nbody.py  run_001.npz
tests/: test_dataset.py  test_device.py  test_graphkan_pipeline_smoke.py  test_kan_layer.py  test_kan_trainer_hybrid.py  test_models.py  test_trainer.py
(+46 files in other folders)
