[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2"
]

[project]
name = "nbody-gkan"
version = "0.1.0"
description = "440 horror"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.0.0",
    "pykan>=0.2.8",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.0.0",
    "sympy>=1.13.0",
    "torch>=2.10.0",
    "torch-geometric>=2.5.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.0",
    "tqdm>=4.67.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nbody_gkan*"]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" }
]
